--- a/testing/web-platform/meta/dom/events/webkit-animation-iteration-event.html.ini
+++ b/testing/web-platform/meta/dom/events/webkit-animation-iteration-event.html.ini
@@ -1,33 +1,29 @@
 [webkit-animation-iteration-event.html]
   expected:
-    if (os == "mac") and not debug: OK
+    if (os == "win") and debug and (processor == "x86_64"): [TIMEOUT, OK]
     if os == "android": OK
     [OK, TIMEOUT]
   [webkitAnimationIteration event listener is case sensitive]
     expected:
-      if (os == "linux") and not debug and fission: [PASS, NOTRUN]
-      if (os == "linux") and not debug and not fission: [PASS, FAIL, NOTRUN]
-      if (os == "win") and debug and (processor == "x86"): [PASS, NOTRUN, FAIL, TIMEOUT]
-      if (os == "win") and debug and (processor == "x86_64"): [PASS, FAIL, TIMEOUT, NOTRUN]
-      if (os == "linux") and debug: [PASS, FAIL, NOTRUN]
+      if (os == "win") and debug and (processor == "x86_64"): [NOTRUN, PASS, TIMEOUT]
+      if (os == "win") and debug and (processor == "x86"): [PASS, TIMEOUT, NOTRUN]
+      if (os == "linux") and fission and debug: [PASS, FAIL, TIMEOUT, NOTRUN]
+      if (os == "linux") and fission and not debug: [PASS, NOTRUN]
       if (os == "mac") and debug: [PASS, NOTRUN]
-      if (os == "win") and not debug: [PASS, FAIL, NOTRUN]
+      if (os == "linux") and not fission: [PASS, FAIL, NOTRUN]
 
   [onwebkitanimationiteration event handler should trigger for an animation]
     expected: [PASS, TIMEOUT]
 
   [webkitAnimationIteration event listener should trigger for an animation]
     expected:
-      if debug and fission and (processor == "x86_64"): [PASS, TIMEOUT, NOTRUN]
-      if debug and fission and (processor == "x86"): [PASS, NOTRUN, TIMEOUT]
+      if debug and fission: [PASS, TIMEOUT, NOTRUN]
       [PASS, NOTRUN]
 
   [webkitAnimationIteration event listener should not trigger if an unprefixed listener also exists]
     expected:
       if (os == "linux") and debug and fission: [PASS, TIMEOUT, NOTRUN]
-      if (os == "win") and swgl: [PASS, TIMEOUT, NOTRUN]
       if (os == "mac") and debug: [PASS, TIMEOUT, NOTRUN]
-      if (os == "mac") and not debug: PASS
       if os == "android": PASS
       [PASS, NOTRUN]
 
@@ -36,29 +32,22 @@
 
   [event types for prefixed and unprefixed animationiteration event handlers should be named appropriately]
     expected:
-      if debug and fission and (processor == "x86_64"): [PASS, TIMEOUT, NOTRUN]
-      if debug and fission and (processor == "x86"): [PASS, TIMEOUT, NOTRUN]
+      if debug and fission: [PASS, TIMEOUT, NOTRUN]
       [PASS, NOTRUN]
 
   [event types for prefixed and unprefixed animationiteration event listeners should be named appropriately]
     expected:
-      if (os == "win") and debug and swgl: [PASS, TIMEOUT, NOTRUN]
+      if (os == "win") and debug and (processor == "x86_64"): [TIMEOUT, PASS, NOTRUN]
       if (os == "linux") and debug and fission: [PASS, TIMEOUT, NOTRUN]
-      if (os == "mac") and not debug: PASS
-      if (os == "win") and not debug: PASS
       if os == "android": PASS
       [PASS, NOTRUN]
 
   [webkitAnimationIteration event listener should not trigger if an unprefixed event handler also exists]
     expected:
-      if debug and fission and (processor == "x86_64") and (os == "win"): [PASS, TIMEOUT, NOTRUN]
-      if debug and fission and (processor == "x86_64") and (os == "linux"): [PASS, TIMEOUT, NOTRUN]
+      if debug and fission: [PASS, TIMEOUT, NOTRUN]
       [PASS, NOTRUN]
 
   [onwebkitanimationiteration event handler should not trigger if an unprefixed listener also exists]
     expected:
-      if debug and fission and (os == "win") and (processor == "x86_64") and swgl: [PASS, TIMEOUT, NOTRUN]
-      if debug and fission and (os == "win") and (processor == "x86"): [PASS, TIMEOUT, NOTRUN]
-      if debug and fission and (os == "mac"): [PASS, TIMEOUT, NOTRUN]
-      if debug and fission and (os == "linux"): [PASS, TIMEOUT, NOTRUN]
+      if debug and fission: [PASS, TIMEOUT, NOTRUN]
       [PASS, NOTRUN]
