--- a/testing/web-platform/meta/dom/nodes/Document-createEvent.https.html.ini
+++ b/testing/web-platform/meta/dom/nodes/Document-createEvent.https.html.ini
@@ -1,12 +1,3 @@
-[Document-createEvent.html]
-  prefs: [dom.w3c_touch_events.legacy_apis.enabled:true]
-  [Should throw NOT_SUPPORTED_ERR for non-legacy event interface "MutationEvent"]
-    expected: FAIL
-
-  [Should throw NOT_SUPPORTED_ERR for pluralized non-legacy event interface "MutationEvents"]
-    expected: FAIL
-
-
 [Document-createEvent.https.html]
   expected:
     if (os == "android") and fission: [OK, TIMEOUT]
@@ -45,3 +36,15 @@
     expected:
       if os == "android": PASS
       PRECONDITION_FAILED
+
+  [TextEvent should be an alias for TextEvent.]
+    expected:
+      if not nightly_build: FAIL
+
+  [textevent should be an alias for TextEvent.]
+    expected:
+      if not nightly_build: FAIL
+
+  [TEXTEVENT should be an alias for TextEvent.]
+    expected:
+      if not nightly_build: FAIL
