--- a/testing/web-platform/meta/editing/run/delete.html.ini
+++ b/testing/web-platform/meta/editing/run/delete.html.ini
@@ -10,9 +10,6 @@
   [[["delete",""\]\] "foo<script>bar</script>[\]baz" compare innerHTML]
     expected: FAIL
 
-  [[["delete",""\]\] "foo<br><br><p>[\]bar</p>" compare innerHTML]
-    expected: FAIL
-
   [[["defaultparagraphseparator","div"\],["delete",""\]\] "foo<div><p>[\]bar</p></div>" compare innerHTML]
     expected: FAIL
 
@@ -23,9 +20,6 @@
     expected: FAIL
 
   [[["delete",""\]\] "<p>foo</p><br><p>[\]bar</p>" compare innerHTML]
-    expected: FAIL
-
-  [[["delete",""\]\] "<p>foo</p><br><br><p>[\]bar</p>" compare innerHTML]
     expected: FAIL
 
   [[["delete",""\]\] "<a>foo</a>[\]bar" compare innerHTML]
@@ -334,46 +328,6 @@
   [[["stylewithcss","false"\],["defaultparagraphseparator","p"\],["delete",""\]\] "<p>foo<p style=color:brown>[\]bar" compare innerHTML]
     expected: FAIL
 
-  [[["defaultparagraphseparator","div"\],["delete",""\]\] "<p style=background-color:aqua>foo<p>[\]bar" compare innerHTML]
-    expected:
-      if editorLegacyDirectionMode: FAIL
-
-  [[["defaultparagraphseparator","p"\],["delete",""\]\] "<p style=background-color:aqua>foo<p>[\]bar" compare innerHTML]
-    expected:
-      if editorLegacyDirectionMode: FAIL
-
-  [[["stylewithcss","true"\],["defaultparagraphseparator","div"\],["delete",""\]\] "<p style=background-color:aqua>foo<p style=background-color:tan>[\]bar" compare innerHTML]
-    expected:
-      if editorLegacyDirectionMode: FAIL
-
-  [[["stylewithcss","false"\],["defaultparagraphseparator","div"\],["delete",""\]\] "<p style=background-color:aqua>foo<p style=background-color:tan>[\]bar" compare innerHTML]
-    expected:
-      if editorLegacyDirectionMode: FAIL
-
-  [[["stylewithcss","true"\],["defaultparagraphseparator","p"\],["delete",""\]\] "<p style=background-color:aqua>foo<p style=background-color:tan>[\]bar" compare innerHTML]
-    expected:
-      if editorLegacyDirectionMode: FAIL
-
-  [[["stylewithcss","false"\],["defaultparagraphseparator","p"\],["delete",""\]\] "<p style=background-color:aqua>foo<p style=background-color:tan>[\]bar" compare innerHTML]
-    expected:
-      if editorLegacyDirectionMode: FAIL
-
-  [[["stylewithcss","true"\],["defaultparagraphseparator","div"\],["delete",""\]\] "<p>foo<p style=background-color:tan>[\]bar" compare innerHTML]
-    expected:
-      if editorLegacyDirectionMode: FAIL
-
-  [[["stylewithcss","false"\],["defaultparagraphseparator","div"\],["delete",""\]\] "<p>foo<p style=background-color:tan>[\]bar" compare innerHTML]
-    expected:
-      if editorLegacyDirectionMode: FAIL
-
-  [[["stylewithcss","true"\],["defaultparagraphseparator","p"\],["delete",""\]\] "<p>foo<p style=background-color:tan>[\]bar" compare innerHTML]
-    expected:
-      if editorLegacyDirectionMode: FAIL
-
-  [[["stylewithcss","false"\],["defaultparagraphseparator","p"\],["delete",""\]\] "<p>foo<p style=background-color:tan>[\]bar" compare innerHTML]
-    expected:
-      if editorLegacyDirectionMode: FAIL
-
   [[["stylewithcss","true"\],["defaultparagraphseparator","div"\],["delete",""\]\] "<p style=text-decoration:underline>foo<p>[\]bar" compare innerHTML]
     expected: FAIL
 
@@ -557,21 +511,6 @@
   [[["delete",""\]\] "foo<b> [&nbsp;bar\]</b>" compare innerHTML]
     expected: FAIL
 
-  [[["delete",""\]\] "<p style=display:inline>fo[o<p style=display:inline>b\]ar" compare innerHTML]
-    expected: FAIL
-
-  [[["stylewithcss","true"\],["delete",""\]\] "<span style=display:block>fo[o</span><span style=display:block>b\]ar</span>" compare innerHTML]
-    expected: FAIL
-
-  [[["stylewithcss","false"\],["delete",""\]\] "<span style=display:block>fo[o</span><span style=display:block>b\]ar</span>" compare innerHTML]
-    expected: FAIL
-
-  [[["stylewithcss","true"\],["delete",""\]\] "<quasit style=display:block>fo[o</quasit><quasit style=display:block>b\]ar</quasit>" compare innerHTML]
-    expected: FAIL
-
-  [[["stylewithcss","false"\],["delete",""\]\] "<quasit style=display:block>fo[o</quasit><quasit style=display:block>b\]ar</quasit>" compare innerHTML]
-    expected: FAIL
-
   [[["delete",""\]\] "<ol><li>foo</ol>{}<br><ol><li>bar</ol>" compare innerHTML]
     expected: FAIL
 
@@ -725,7 +664,6 @@
   [[["styleWithCSS","false"\],["defaultparagraphseparator","p"\],["delete",""\]\] "<p><font size=5>foo</font><p><font color=blue>[\]bar</font>" queryCommandValue("fontSize") before]
     expected: FAIL
 
-
   [[["delete",""\]\] "<ul><ol><li>[abc</li></ol><li>def\]</li></ul>" compare innerHTML]
     expected: FAIL
 
@@ -739,4 +677,10 @@
     expected: FAIL
 
   [[["delete",""\]\] "<ul><ol><li>[abc</li></ol><ul><li>def\]</li></ul></ul>" compare innerHTML]
+    expected: FAIL
+
+  [[["delete",""\]\] "<div>{abc</div><div>def</div>}" compare innerHTML]
+    expected: FAIL
+
+  [[["delete",""\]\] "<div>abc</div><div>{def</div>}" compare innerHTML]
     expected: FAIL
