--- a/testing/web-platform/meta/editing/run/forwarddelete.html.ini
+++ b/testing/web-platform/meta/editing/run/forwarddelete.html.ini
@@ -262,46 +262,6 @@
   [[["stylewithcss","false"\],["defaultparagraphseparator","p"\],["forwarddelete",""\]\] "<p>foo[\]<p style=color:brown>bar" compare innerHTML]
     expected: FAIL
 
-  [[["defaultparagraphseparator","div"\],["forwarddelete",""\]\] "<p style=background-color:aqua>foo[\]<p>bar" compare innerHTML]
-    expected:
-      if editorLegacyDirectionMode: FAIL
-
-  [[["defaultparagraphseparator","p"\],["forwarddelete",""\]\] "<p style=background-color:aqua>foo[\]<p>bar" compare innerHTML]
-    expected:
-      if editorLegacyDirectionMode: FAIL
-
-  [[["stylewithcss","true"\],["defaultparagraphseparator","div"\],["forwarddelete",""\]\] "<p style=background-color:aqua>foo[\]<p style=background-color:tan>bar" compare innerHTML]
-    expected:
-      if editorLegacyDirectionMode: FAIL
-
-  [[["stylewithcss","false"\],["defaultparagraphseparator","div"\],["forwarddelete",""\]\] "<p style=background-color:aqua>foo[\]<p style=background-color:tan>bar" compare innerHTML]
-    expected:
-      if editorLegacyDirectionMode: FAIL
-
-  [[["stylewithcss","true"\],["defaultparagraphseparator","p"\],["forwarddelete",""\]\] "<p style=background-color:aqua>foo[\]<p style=background-color:tan>bar" compare innerHTML]
-    expected:
-      if editorLegacyDirectionMode: FAIL
-
-  [[["stylewithcss","false"\],["defaultparagraphseparator","p"\],["forwarddelete",""\]\] "<p style=background-color:aqua>foo[\]<p style=background-color:tan>bar" compare innerHTML]
-    expected:
-      if editorLegacyDirectionMode: FAIL
-
-  [[["stylewithcss","true"\],["defaultparagraphseparator","div"\],["forwarddelete",""\]\] "<p>foo[\]<p style=background-color:tan>bar" compare innerHTML]
-    expected:
-      if editorLegacyDirectionMode: FAIL
-
-  [[["stylewithcss","false"\],["defaultparagraphseparator","div"\],["forwarddelete",""\]\] "<p>foo[\]<p style=background-color:tan>bar" compare innerHTML]
-    expected:
-      if editorLegacyDirectionMode: FAIL
-
-  [[["stylewithcss","true"\],["defaultparagraphseparator","p"\],["forwarddelete",""\]\] "<p>foo[\]<p style=background-color:tan>bar" compare innerHTML]
-    expected:
-      if editorLegacyDirectionMode: FAIL
-
-  [[["stylewithcss","false"\],["defaultparagraphseparator","p"\],["forwarddelete",""\]\] "<p>foo[\]<p style=background-color:tan>bar" compare innerHTML]
-    expected:
-      if editorLegacyDirectionMode: FAIL
-
   [[["stylewithcss","true"\],["defaultparagraphseparator","div"\],["forwarddelete",""\]\] "<p style=text-decoration:underline>foo[\]<p>bar" compare innerHTML]
     expected: FAIL
 
@@ -476,9 +436,6 @@
   [[["forwarddelete",""\]\] "<ol><li><p>foo</ol><p>{}<br></p><ol><li>bar</ol>" compare innerHTML]
     expected: FAIL
 
-  [[["forwarddelete",""\]\] "<ol><ol><li>foo</ol><li>{}<br><ol><li>bar</ol></ol>": execCommand("forwarddelete", false, "") return value]
-    expected: FAIL
-
   [[["forwarddelete",""\]\] "<ol><ol><li>foo</ol><li>{}<br><ol><li>bar</ol></ol>" compare innerHTML]
     expected: FAIL
 
@@ -616,4 +573,25 @@
     expected: FAIL
 
   [[["forwarddelete",""\]\] "<ol>\\n<li>[abc</li></ol><ul><li>def\]</li></ul>" compare innerHTML]
+    expected: FAIL
+
+  [[["forwarddelete",""\]\] "<div>{abc</div><div>def</div>}" compare innerHTML]
+    expected: FAIL
+
+  [[["forwarddelete",""\]\] "<div>abc</div><div>{def</div>}" compare innerHTML]
+    expected: FAIL
+
+  [[["forwarddelete",""\]\] "<div style=display:flex><span>{abc</span><span>def</span>}</div>" compare innerHTML]
+    expected: FAIL
+
+  [[["forwarddelete",""\]\] "<div style=display:flex><span>abc</span><span>{def</span>}</div>" compare innerHTML]
+    expected: FAIL
+
+  [[["forwarddelete",""\]\] "<div style=display:grid><span>{abc</span><span>def</span>}</div>" compare innerHTML]
+    expected: FAIL
+
+  [[["forwarddelete",""\]\] "<div style=display:grid><span>abc</span><span>{def</span>}</div>" compare innerHTML]
+    expected: FAIL
+
+  [[["forwarddelete",""\]\] "<p><span contenteditable=false>ab</span>{}</p>": execCommand("forwarddelete", false, "") return value]
     expected: FAIL
